--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
    
     <!-- Download -->
-    <div class="basic-4">
+    <div class="basic-4 basic-4altbac">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
@@ -258,7 +258,7 @@
 
 
     <!-- Download -->
-    <div class="basic-4">
+    <div class="basic-4 basic-4altbac">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
