--- a/index.html
+++ b/index.html
@@ -487,7 +487,54 @@
 
     <!-- Contact -->
     
+    <!-- Download -->
+    <div class="basic-4 basic-4altbac">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-xl-5">
+                    <div class="text-container">
+                        <h2>Cut <span class="blue">it All!</span></h2>
+                        <p class="p-large">Разрезание обьектов</p>
+                        <a class="btn-solid-lg" target="_blank" href="https://github.com/IllBond/Cut-it-All/tree/master/APK"><i class="fab fa-google-play"></i>APK</a>
+                        <a class="btn-solid-lg" target="_blank" href="https://github.com/IllBond/Cut-it-All"><i class="fab fa-github"></i>Git hub</a>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-6 col-xl-7">
+                    <!-- Video -->
+                    <div id="features4" class="basic-1">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h2>Видео геймплея</h2>
+                                    <div class="p-heading p-large">Hyper Casual</div>
+                                </div> <!-- end of col -->
+                            </div> <!-- end of row -->
+                            <div class="row">
+                                <div class="col-lg-12">
 
+                                    <!-- Video Видео геймплея -->
+                                    <div class="image-container">
+                                        <div class="video-wrapper">
+                                            <a class="popup-youtube" href="https://www.youtube.com/watch?v=gemOUu-K8G8" data-effect="fadeIn">
+                                                <img class="img-fluid" src="images/0008.jpg" alt="alternative">
+                                                <span class="video-play-button">
+                                                    <span></span>
+                                                </span>
+                                            </a>
+                                        </div> <!-- end of video-wrapper -->
+                                    </div> <!-- end of image-container -->
+                                    <!-- end of video Видео геймплея -->
+
+                                </div> <!-- end of col -->
+                            </div> <!-- end of row -->
+                        </div> <!-- end of container -->
+                    </div> <!-- end of basic-1 -->
+                    <!-- end of video -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of basic-4 -->
+    <!-- end of download -->
 
 
 
