--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                     <a class="nav-link page-scroll red" href="#features7">Проект 7</a>
                 </li>
 
+                <li class="nav-item">
+                    <a class="nav-link page-scroll red" href="#features8">Проект 8</a>
+                </li>
+
 
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#contact">Мои контакты</a>
@@ -501,7 +505,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <!-- Video -->
-                    <div id="features4" class="basic-1">
+                    <div id="features8" class="basic-1">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12">
